# AI-To-Do-App

./: .gitignore  .renderignore  README.md  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.template  .gitignore  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/database/: models.py  session.py
backend/app/graphql/: mutations.py  queries.py  schema.py  types.py
backend/app/services/: ai.py  todo.py
frontend/: .gitignore  Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/src/components/todos/: TodoList.tsx
frontend/src/components/ui/: EmptyState.tsx  button.tsx  card.tsx  toggle-button.tsx
frontend/src/graphql/mutations/: todos.ts
frontend/src/graphql/queries/: todos.ts
frontend/src/lib/: apollo-client.ts
frontend/src/pages/: _app.tsx  index.tsx
frontend/src/styles/: globals.css
