[tool.poetry]
name = "todo-backend"
version = "0.1.0"
description = "Todo backend with FastAPI and GraphQL"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
strawberry-graphql = "^0.211.1"
sqlalchemy = "^2.0.23"
python-dotenv = "^1.0.0"
openai = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 